"No stops nearby" now displayed on mobile page fixing OBANYC-1210.

--- a/onebusaway-nyc-webapp/src/main/webapp/css/mobile/mobile.css
+++ b/onebusaway-nyc-webapp/src/main/webapp/css/mobile/mobile.css
@@ -276,7 +276,7 @@ small {
 }
 
 .noMatches {
-	padding-bottom: 1em;
+	padding-top: 1em;
 }
 
 .stopResultGroupHeader {
